syntax = "proto3";

package calculator;

option go_package = "github.com/acernik/grpc-go-course/calculator/proto";

import "sqrt.proto";

message CalculatorRequest {
  int64 first_num = 1;
  int64 second_num = 2;
}

message CalculatorResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Sum (CalculatorRequest) returns (CalculatorResponse);
  rpc Sqrt (SqrtRequest) returns (SqrtResponse);
}